# rust1.84_regression_reproducer

./: Cargo.toml  diesel.toml
migrations/2025-01-17-133702_new/: up.sql
src/: main.rs  schema.rs
